feat: prácticas hasta la trece

--- a/Práctica 10/MDL_Analisis Comparativo entre métodos de clasificación Practica 10.ipynb
+++ b/Práctica 10/MDL_Analisis Comparativo entre métodos de clasificación Practica 10.ipynb
@@ -353,6 +353,16 @@
     "print(\"--- Tabla Comparativa de Clasificadores ---\")\n",
     "display(df_resultados)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c76f86e",
+   "metadata": {},
+   "source": [
+    "## CONCLUSIONES\n",
+    "\n",
+    "En esta práctica realizamos análisis comparativo de las métricas de diferentes formas de evaluar la precisión de nuestro modelo."
+   ]
   }
  ],
  "metadata": {
