--- a/Práctica 9/MDL_criticas_de_cine.ipynb
+++ b/Práctica 9/MDL_criticas_de_cine.ipynb
@@ -1921,6 +1921,28 @@
     "plt.legend(loc='upper right', fontsize=12)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc296d15",
+   "metadata": {},
+   "source": [
+    "### CONCLUSIONES\n",
+    " En esta practica implementamos cuatro enfoques de entrenamiento: el enfoque Basado en Tabla de Aprendizaje y Tabla Testing (the validation test approach), el enfoque Basado en Tabla Completa (como tabla de training y testing), LOOCV y K-Folds para medir el error. Los enfoques utilizaron una red neuronal con la técnica de propagación hacia atras (por sus siglas en el idioma Ingles NNBP). La red NNBP se implento utilizando la libreria de código abierto SCIKIT-LEARN.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72b33dba",
+   "metadata": {},
+   "source": [
+    "### Referencias\n",
+    "\n",
+    "Learning in Python, (2025). URL: https://scikit-learn.org/stable/modules/generated/sklearn.neural_network.MLPClassifier.html\n",
+    "\n",
+    "Rodriguez (2025). Reporte Técnico de PROMIDAT: http://promidat.com/ (Ultimo acceso febrero 2025).\n"
+   ]
   }
  ],
  "metadata": {
