updt: añadí la interpretación del profe pq gemini no vale madres

--- a/Práctica 13/MDL_aprendizaje_no_supervisado_pt13.ipynb
+++ b/Práctica 13/MDL_aprendizaje_no_supervisado_pt13.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "13e856a8",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "9c101f97",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "b1072695",
    "metadata": {},
    "outputs": [
@@ -227,6 +227,7 @@
    "source": [
     "## Interpretación de Resultados (Biplot)\n",
     "\n",
+    "##### Explicación generada por Gemini\n",
     "El gráfico generado nos permite extraer las siguientes conclusiones sobre los datos:\n",
     "\n",
     "**1. Análisis de Vectores (Asignaturas):**\n",
@@ -241,7 +242,16 @@
     "* **Dirección:** La posición de un estudiante respecto a los vectores indica sus fortalezas.\n",
     "    * Los estudiantes situados en la dirección de las flechas de **Ciencias/Matemáticas** tienen calificaciones altas en esas áreas.\n",
     "    * Los estudiantes situados en la dirección de **Historia/Español** destacan en humanidades.\n",
-    "    * El vector de **EdFisica** (Educación Física) suele mostrar un comportamiento distinto, posiblemente ortogonal o menos correlacionado con el bloque académico tradicional."
+    "    * El vector de **EdFisica** (Educación Física) suele mostrar un comportamiento distinto, posiblemente ortogonal o menos correlacionado con el bloque académico tradicional.\n",
+    "\n",
+    "\n",
+    "##### La explicación del profe:\n",
+    "\n",
+    "Cluster1 (Luis y Sonia), se ve fuertemente impactado de manera positiva por las notas de educación física, es decir son buenos deportistas.\n",
+    "\n",
+    "Cluster2 (Ana, Inés, José y Pedro) parece ser lo opuesto al cluster 1. Sus integrantes se destacan en ciencias y matemáticas, sin embargo son malos en deportes.\n",
+    "\n",
+    "Cluster3 (Andrés, Carlos, Lucía y María). Se caracteriza por agrupar a los estudiantes destacados en el área de español e historia. Se puede inferir también que si bien no son excelentes en deportes, al menos no son los peores, pues se encuentran en la mitad del eje X."
    ]
   },
   {
@@ -251,11 +261,9 @@
    "source": [
     "## Conclusiones\n",
     "\n",
-    "Mediante la aplicación del PCA, logramos reducir la dimensionalidad del dataset estudiantil conservando la mayor parte de la información (varianza).\n",
+    "PCA significa Análisis de Componentes Principales (Principal Component Analysis, en inglés). Es una técnica estadística muy utilizada en ciencia de datos, aprendizaje automático y análisis de datos para reducir la dimensionalidad de un conjunto de datos, manteniendo la mayor cantidad posible de información.\n",
     "\n",
-    "Al observar el gráfico generado:\n",
-    "* Las **flechas (materias)** nos indican correlaciones: Vectores cercanos (ej. Matemáticas y Ciencias) indican que los alumnos buenos en una suelen ser buenos en la otra.\n",
-    "* Los **puntos (estudiantes)** nos muestran agrupamientos naturales: Podemos identificar visualmente quiénes tienen un perfil más orientado a las humanidades, a las ciencias o a los deportes, sin necesidad de analizar la tabla numérica fila por fila."
+    "En esta práctica implementaremos Análisis de Componentes Principales (Principal Component Analysis, en inglés) para realizar tres clusters de notas escolares.\n"
    ]
   },
   {
